opponent car added

--- a/HTML/game.html
+++ b/HTML/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="../CSS/game.css">
     <title>Document</title>
 </head>
 <body>
@@ -16,10 +16,10 @@
         <img class="aImg" id="t3" src="https://image.ibb.co/it4jDJ/t5.png">
         <img class="aImg" id="t4" src="https://image.ibb.co/ksy0nd/t4.png">
         <img class="aImg" id="c1" src="https://image.ibb.co/f4v7YJ/c2.png">
-        <img class="aImg" id="c2" src="./assets/oppenentCar1.webp">
-        <img class="aImg" id="c3" src="./assets/oppenentCar2.png">
+        <img class="aImg" id="c2" src="../assets/oppenentCar1.webp">
+        <img class="aImg" id="c3" src="../assets/oppenentCar2.png">
     </div>
     <div class="speedometer">speed: <span class="carspeed">0</span>km/hr</div>
-    <script src="game.js"></script>
+    <script src="../JS/game.js"></script>
 </body>
 </html>
