--- a/HTML/start.html
+++ b/HTML/start.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <title>3D Car Drive!</title>
   </head>
-  <body onload="done()">
+  <body >
     <div class="gameHome" id="startPage">
       <div id="gameTitle">3D Car Drive!</div>
       <button onClick="play()">Play</button>
     </div>
-    <script src="index.js"></script>
+    <script src="../JS/index.js"></script>
   </body>
 </html>
