final boss added

--- a/HTML/game.html
+++ b/HTML/game.html
@@ -18,6 +18,8 @@
         <img class="aImg" id="c1" src="https://image.ibb.co/f4v7YJ/c2.png">
         <img class="aImg" id="c2" src="../assets/oppenentCar1.webp">
         <img class="aImg" id="c3" src="../assets/oppenentCar2.png">
+        <img class="aImg" id="l1" src="../assets/level1.png">
+        <img class="aImg" id="l2" src="../assets/level2.png">
     </div>
     <div class="speedometer">speed: <span class="carspeed">0</span>km/hr</div>
     <script src="../JS/game.js"></script>
