--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,27 +11,25 @@
     padding: 0;
      }
 #image{
-    width: 100%;
-    height: 561.5px;
-    overflow: hidden;
-    /* z-index: 2; */
+    width: 100vw;
+    height: 100vh;
 } 
 #enter{ 
     position: absolute;
     bottom: 5%;
-    width: 100%;
+    width: 100vh;
     color: white;
-    /* z-index: 1; */
     font-size: 20px;
    }
     </style>
 </head>
 <body>
-    <img id="image" src="need-for-speed.png" alt="">
+    <img id="image" src="../assets/need-for-speed.png" alt="">
     <div id="enter">
     <marquee  direction="right">
         <h1>Press Enter To Play</h1>
     </marquee>   
     </div>
+    <script src="../JS/index.js" ></script>
 </body>
 </html>
