--- a/HTML/result.html
+++ b/HTML/result.html
@@ -15,7 +15,7 @@
         window.location.href = 'game.html';
     }
     function quitGame(){
-        window.location.href = 'index.html';
+        window.location.href = '';
     }
 </script>
 </html>
