--- a/HTML/start.html
+++ b/HTML/start.html
@@ -12,6 +12,6 @@
       <div id="gameTitle">3D Car Drive!</div>
       <button onClick="play()">Play</button>
     </div>
-    <script src="../JS/index.js"></script>
+    <script src="../JS/start.js"></script>
   </body>
 </html>
