--- a/HTML/result.html
+++ b/HTML/result.html
@@ -3,19 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <style>
+        .resutl{
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap:3rem;
+        }
+        h1{
+            text-align: center;
+        }
+
+    </style>
+    <title>Race</title>
 </head>
 <body>
-    <h1>Working</h1>
-    <button onClick = "restartGame()">Restart</button>
-    <button onClick = "quitGame()">Quti</button>
+    <div class = "resutl">
+        <h1>Working</h1>
+        <h2>Level Achived: <span class="score">0</span></h2>
+        <div>
+            <button onClick = "restartGame()">Restart</button>
+            <button onClick = "quitGame()">Quti</button>
+        </div>
+    </div>
 </body>
 <script>
+    var level = localStorage.getItem("level");
+    document.querySelector(".score").innerHTML = level;
     function restartGame(){
         window.location.href = 'game.html';
     }
     function quitGame(){
-        window.location.href = 'index.html';
+        window.location.href = 'start.html';
     }
 </script>
 </html>
