--- a/HTML/start.html
+++ b/HTML/start.html
@@ -5,6 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
+    <style>
+      .gameHome{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap:2rem;
+      }
+      .gameHome,#gameTitle{
+        font-size: 5rem;
+        font-weight: 700;
+      }
+      button{
+        font-size: 3rem;
+        font-weight: 700;
+        border-radius: 1.5rem;
+      }
+    </style>
     <title>3D Car Drive!</title>
   </head>
   <body >
