--- a/HTML/game.html
+++ b/HTML/game.html
@@ -15,11 +15,13 @@
         <img class="aImg" id="t2" src="https://image.ibb.co/jajjDJ/t2.png">
         <img class="aImg" id="t3" src="https://image.ibb.co/it4jDJ/t5.png">
         <img class="aImg" id="t4" src="https://image.ibb.co/ksy0nd/t4.png">
-        <img class="aImg" id="c1" src="https://image.ibb.co/f4v7YJ/c2.png">
-        <img class="aImg" id="c2" src="../assets/oppenentCar1.webp">
-        <img class="aImg" id="c3" src="../assets/oppenentCar2.png">
-        <img class="aImg" id="l1" src="../assets/level1.png">
-        <img class="aImg" id="l2" src="../assets/level2.png">
+        <img class="aImg" id="m1" src="https://image.ibb.co/f4v7YJ/c2.png">
+        <img class="aImg" id="c1" src="../assets/camry.png">
+        <img class="aImg" id="c2" src="../assets/harrier.png">
+        <img class="aImg" id="c3" src="../assets/thar.png">
+        <img class="aImg" id="l1" src="../assets/revuelto.png">
+        <img class="aImg" id="l2" src="../assets/bolide.png">
+        <img class="aImg" id="l3" src="../assets/jesko.png">
     </div>
     <div class="speedometer">speed: <span class="carspeed">0</span>km/hr</div>
     <script src="../JS/game.js"></script>
