enter button working

--- a/HTML/result.html
+++ b/HTML/result.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Working</h1>
     <button onClick = "restartGame()">Restart</button>
-    <button onClick = "quitGame()">Quti</button>
+    <button onClick = "quitGame()">Quit</button>
 </body>
 <script>
     function restartGame(){
