--- a/HTML/start.html
+++ b/HTML/start.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <style>
       .gameHome{
         display:flex;
