resolving collision bugs

--- a/HTML/start.html
+++ b/HTML/start.html
@@ -36,6 +36,6 @@
         <marquee behavior="" direction="right">Press enter to play</marquee>
     </div>
 
-    <script src="../JS/index.js"></script>
+    <script src="../JS/start.js"></script>
 </body>
 </html>
