--- a/HTML/result.html
+++ b/HTML/result.html
@@ -5,40 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <style>
-        body{
-            margin: 0;
-            background-image: url('../assets/car-bmw-m3-bmw-race-cars-wallpaper-preview.jpg') ; 
-            background-size: cover; 
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            
-           
-        }
+        body {
+        background-image: url("../assets/backgound2.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;  
+        background-size: cover;
+      }
         .resutl{
+            position:absolute;
+            top:10rem;
+            left:30rem;
+            height:22rem;
             display:flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            gap:3rem;
-            color: white;
         }
-        h1{
+        h1,h2{
             text-align: center;
+            color:white;
+            font-size: 5rem;
+            color: #002244;
+            text-shadow: 4px 4px 4px #0CAFFF;
         }
-
+        body{
+            overflow:hidden;
+            background-color: black;
+        }
+        .b1,.b2{
+            font-size: 1.2rem;
+            width:5rem;
+            font-weight: 700;
+            border-radius: 1.5rem;
+            animation-name: flow;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
+            margin:2rem;
+        }
+        .b1{
+            background-color: green;
+        }
+        .b2{
+            background-color: red;
+        }
+        @keyframes flow{
+            0%{
+                scale:1.3;
+            }50%{
+                scale:1;
+            }100%{
+                scale:1.3;
+            }
+        }
     </style>
     <title>Race</title>
-  </head>
+</head>
+<body>
     <div class = "resutl">
-        <h1>Working</h1>
+        <h1>Game Result</h1>
         <h2>Level Achived: <span class="score">0</span></h2>
-        <div>
-            <button onClick = "restartGame()">Restart</button>
-            <button onClick = "quitGame()">Quit</button>
+        <div class="btn">
+            <button  class="b1" onClick = "restartGame()">Restart</button>
+            <button  class="b2" onClick = "quitGame()">Quti</button>
         </div>
     </div>
-
 </body>
 <script>
     var level = localStorage.getItem("level");
@@ -47,9 +77,7 @@
         window.location.href = 'game.html';
     }
     function quitGame(){
-
         window.location.href = 'start.html';
-
     }
 </script>
 </html>
