--- a/HTML/game.html
+++ b/HTML/game.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <link rel="stylesheet" href="../CSS/game.css">
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+    <title>Mach Roader</title>
 </head>
 <body>
     <div id="mainContainer" style="background:#0f0" >
