--- a/HTML/start.html
+++ b/HTML/start.html
@@ -57,7 +57,7 @@
             }
         }
     </style>
-    <title>3D Car Drive!</title>
+    <title>Mach Roader</title>
   </head>
   <body >
     <div class="gameHome" id="startPage">
