--- a/HTML/result.html
+++ b/HTML/result.html
@@ -10,7 +10,7 @@
         background-repeat: no-repeat;
         background-attachment: fixed;  
         background-size: cover;
-      }
+        }
         .resutl{
             position:absolute;
             top:10rem;
@@ -25,8 +25,8 @@
             text-align: center;
             color:white;
             font-size: 5rem;
-            color: #002244;
-            text-shadow: 4px 4px 4px #0CAFFF;
+            color: burlywood;
+            text-shadow: 8px 8px 4px #002244;
         }
         body{
             overflow:hidden;
@@ -58,7 +58,7 @@
             }
         }
     </style>
-    <title>Race</title>
+    <title>Mach Roader</title>
 </head>
 <body>
     <div class = "resutl">
