--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Need for Speed</title>
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
+    <title>Mach Roader</title>
     
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-color: black;
+            background-image: url("../assets/background4.jpg");
+            background-repeat: no-repeat;
+            background-attachment: fixed;  
+            background-size: cover;
         }
 
         #enter {
