--- a/HTML/game.html
+++ b/HTML/game.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/fontawesome/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <link rel="stylesheet" href="../CSS/game.css">
     <link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
     <title>Mach Roader</title>
@@ -18,6 +17,9 @@
         <img class="aImg" id="t3" src="https://image.ibb.co/it4jDJ/t5.png">
         <img class="aImg" id="t4" src="https://image.ibb.co/ksy0nd/t4.png">
         <img class="aImg" id="m1" src="https://image.ibb.co/f4v7YJ/c2.png">
+        <img class="aImg" id="f1" src="../assets/camryFront.png">
+        <img class="aImg" id="f2" src="../assets/harrierFront.png">
+        <img class="aImg" id="f3" src="../assets/tharFront.png">
         <img class="aImg" id="c1" src="../assets/camry.png">
         <img class="aImg" id="c2" src="../assets/harrier.png">
         <img class="aImg" id="c3" src="../assets/thar.png">
