--- a/HTML/result.html
+++ b/HTML/result.html
@@ -63,7 +63,7 @@
 <body>
     <div class = "resutl">
         <h1>Game Result</h1>
-        <h2>Level Achived: <span class="score">0</span></h2>
+        <h2>Level : <span class="score">0</span></h2>
         <div class="btn">
             <button  class="b1" onClick = "restartGame()">Restart</button>
             <button  class="b2" onClick = "quitGame()">Quti</button>
